expand about page, some tidy up, begin clientside form validation

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
 <p>An offhand comment made at work gave me the idea. I thought it'd be a fun exercise. It might actually be useful to someone</p>
 <p>But really, mostly just because I thought it'd be fun</p>
 <h3>What's it made with?</h3>
-<p>Python, Flask, Tweepy, Twitter Bootstrap, other things I may have forgotten</p>
+<p>Python, Flask, Tweepy, Twitter Bootstrap, other things I may have forgotten.</p>
 <h3>Who are you</h3>
 <p>Matthew Owen</p>
 <ul>
