--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,20 @@
 <head>
     <link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet">
 	<link rel="shortcut icon" href="/static/favicon.ico" />
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+	<!--<script src="/static/bootstrap/js/bootstrap.js" type="text/javascript"></script>-->
+	<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.js" type="text/javascript"></script>
 	<link href="/static/styles.css" rel="stylesheet">
+	<script type="text/javascript">
+	<!--
+	window.onload = (function(){
+		try{
+			$(document).ready(function(){
+				$("#sidebarForm").validate();
+			});
+		}catch(e){}});
+	-->
+	</script>
 {% block head %}
 <title>TweetBotNet</title>
 {% endblock %}
@@ -20,9 +33,10 @@
 		</div>
 	</nav>
 </header>
-<div class="container">
 {% endblock %}
-<article class="span7">
+<div class="container">
+<div class="row">
+<article class="span8">
 
 {% block body %}
 
@@ -32,18 +46,17 @@
 
 <aside class="span4">
 	{% block sidebar %}
-	<form action="/tweetnets/" method="post">
+	<form id="sidebarForm" class="form-horizontal" action="/tweetnets/" method="post">
 		<h3>Create a TweetNet</h3>
 		<label for="name">Tweetnet name</label>
-		<input name="name" id="name">
+		<input name="name" id="name" class="required" minlength="1" type="text">
 		<label for="account">Account to retweet</label>
-		<input name="account" id="account">
+		<input name="account" id="account" class="required" minlength="1" type="text">
 		<label for="callsign">Callsign to watch for</label>
-				<div class="input-prepend">
-					<span class="add-on">#</span>
-					<input name="callsign" id="callsign" type="text">
-				</div>
-		<button type="submit" class="btn">Create TweetNet</button>
+		<div class="input-prepend">
+			<span class="add-on">#</span><input name="callsign" id="callsign" type="text" size="8" class="required" minlength="1">
+		</div>
+		<button type="submit" class="btn sbtn">Create TweetNet</button>
 	</form>
 	{% endblock %}
 </aside>
@@ -59,6 +72,7 @@
 {% block script %}
 
 {% endblock %}
+</div>
 </div>
 </body>
 </html>
