--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block body %}
-<h2>You probably shouldn't use TweetNet</h2>
+<h2>Using TweetNet could be the best thing you've ever done, or the worst.</h2>
 <p>TweetNet is a tool to create auto-retweeting networks of Twitter accounts</p>
-<p>When you create a TweetNet, you specify a user and a hashtag to watch. When that user tweets using that hashtag, any accounts in the TweetNet will automatically retweet the tweet.</p>
-<p><a href="/tweetnets/">Click here to see existing TweetNets</a> or use the form on the right to create a new one</p>
+<p>When you create a TweetNet, you specify a user and a hashtag to watch. When that user tweets using that hashtag, any accounts that have joined the TweetNet will automatically retweet the tweet.</p>
+<p><a href="/tweetnets/">Click here to see existing TweetNets</a>, use the form on the right to create a new TweetNet, or <a href="/about/">click here to find out more about TweetNet</a>.</p>
 {% endblock %}
