renamed to tweetswarm

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block body %}
-<h2>About TweetNet</h2>
+<h2>About TweetSwarm</h2>
 <h3>What is it?</h3>
-<p>TweetNet is a tool to bring Twitter acccounts together into drone networks</p>
-<p>Create a TweetNet, specifying a user and hashtag to follow. Add Twitter accounts to the TweetNet. Then, whenever the specified user tweets using the specified hashtag, all of the added Twitter accounts will automatically retweet it.</p>
+<p>TweetSwarm is a tool to bring Twitter acccounts together into drone networks</p>
+<p>Create a TweetSwarm, specifying a user and hashtag to follow. Add Twitter accounts to the TweetSwarm. Then, whenever the specified user tweets using the specified hashtag, all of the added Twitter accounts will automatically retweet it.</p>
 <p>You might have a legitimate purpose for this. I hope so. Please don't use this for something you shouldn't.</p>
 <h3>Why?</h3>
 <p>An offhand comment made at work gave me the idea. I thought it'd be a fun exercise. It might actually be useful to someone</p>
