missing question mark;

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
 <p>But really, mostly just because I thought it'd be fun</p>
 <h3>What's it made with?</h3>
 <p>Python, Flask, Tweepy, Twitter Bootstrap, other things I may have forgotten.</p>
-<h3>Who are you</h3>
+<h3>Who are you?</h3>
 <p>Matthew Owen</p>
 <ul>
 	<li><a href="http://www.matthew-owen.com">Website</a></li>
