--- a/templates/base.html
+++ b/templates/base.html
@@ -7,36 +7,7 @@
 	<script src="/static/bootstrap/js/bootstrap.js" type="text/javascript"></script>
 	<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.js" type="text/javascript"></script>
 	<link href="/static/styles.css" rel="stylesheet">
-	<script type="text/javascript">
-	<!--
-	window.onload = (function(){
-		try{
-			$(document).ready(function(){
-				$.validator.addMethod(
-					"nospace", 
-					function(value, element) {
-						return this.optional(element) || (value.indexOf(' ') == -1)
-				},
-				$.format("Please enter a single word")
-				);
-				$("#sidebarForm").validate(
-					{
-						errorLabelContainer: $("#RegisterErrors"),
-						rules: {
-							name: { required: true, maxlength: 30, nospace: true},
-							account: { required: true, maxlength: 30, nospace: true},
-							callsign: {required: true, maxlength: 30, nospace: true}
-						},
-						messages: {
-							name: "Please give your TweetSwarm a one word name, up to thirty characters",
-							account: "Please specify an account for your TweetSwarm to follow",
-							callsign: "Please specify a hashtag for your TweetSwarm to follow"
-						}
-					});
-			});
-		}catch(e){}});
-	-->
-	</script>
+	<script src="/static/js/site.js" type="text/javascript"></script>
 {% block head %}
 <title>TweetSwarm</title>
 {% endblock %}
@@ -69,11 +40,13 @@
 	<form id="sidebarForm" class="form-horizontal" action="/tweetswarms/" method="post">
 		<h3>Create a TweetSwarm</h3>
 		<div id="RegisterErrors" class="alert alert-error" style="display:none"></div>
-		<label for="name">Tweetnet name</label>
+		<label for="name">TweetSwarm name</label>
 		<input name="name" id="name" minlength="1" type="text">
 		<label for="account">Account to retweet</label>
-		<input name="account" id="account" minlength="1" type="text">
-		<label for="callsign">Callsign to watch for</label>
+		<div class="input-prepend">
+			<span class="add-on">@</span><input name="account" id="account" minlength="1" type="text">
+		</div>
+		<label for="callsign">Callsign to watch for (optional)</label>
 		<div class="input-prepend">
 			<span class="add-on">#</span><input name="callsign" id="callsign" type="text" size="8">
 		</div>
