--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
 {% block body %}
-<h2>Using TweetSwarm could be the best thing you've ever done, or the worst.</h2>
+<h2>TweetSwarm lets you aggregate and spread tweets</h2>
 <p>TweetSwarm is a tool to create auto-retweeting networks of Twitter accounts</p>
-<p>When you create a TweetSwarm, you specify a user and a hashtag to watch. When that user tweets using that hashtag, any accounts that have joined the TweetSwarm will automatically retweet the tweet.</p>
+<p>When you create a TweetSwarm, you specify a user and (optionally) a hashtag to watch. When that user tweets using that hashtag, any accounts that have joined the TweetSwarm will automatically retweet the tweet.</p>
+<p>Any account can join any number of TweetSwarms</p>
 <p><a href="/tweetswarms/">Click here to see existing TweetSwarms</a>, use the form on the right to create a new TweetSwarm, or <a href="/about/">click here to find out more about TweetSwarm</a>.</p>
 {% endblock %}
