add google analytics, update about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
 	<dt>Create a Twitter 'botnet'</dt>
 	<dd>Create a TweetSwarm following a master Twitter account. Join slave accounts to it. Instantly retweet whatever's tweeted.</dd>
 	<dt>Set up an aggregating Twitter bot</dt>
-	<dd>Set up TweetSwarms for all the user/hastag combos you want to follow. Join them all with a single account. You'll draw all those tweets together with one</dd>
+	<dd>Set up TweetSwarms for all the user/hashtag combos you want to follow. Join them all with a single account. You'll draw all those different feeds together into one</dd>
 </dl>
 <h3>What's it made with?</h3>
 <p>Python, Flask, Tweepy, Twitter Bootstrap, etc.</p>
