--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,5 @@
 <p>TweetSwarm is a tool to create auto-retweeting networks of Twitter accounts</p>
 <p>When you create a TweetSwarm, you specify a user and (optionally) a hashtag to watch. When that user tweets using that hashtag, any accounts that have joined the TweetSwarm will automatically retweet the tweet.</p>
 <p>Any account can join any number of TweetSwarms</p>
-<p><a href="/tweetswarms/">Click here to see existing TweetSwarms</a>, use the form on the right to create a new TweetSwarm, or <a href="/about/">click here to find out more about TweetSwarm</a>.</p>
+<p><a href="/tweetswarms/">Click here to see existing TweetSwarms</a>, use the form on the right to create a new TweetSwarm, or <a href="/about/">click here to find out more about TweetSwarm and how you might use it</a>.</p>
 {% endblock %}
